# tree-sitter-languages-rs

./: .gitattributes  .gitmodules  Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
.specstory/: .project.json
.specstory/history/: 2025-12-15_23-48Z-initialization-process-discussion.md
examples/: highlighter.rs
examples/docs/: List of parsers.md
scripts/: create_tree_sitter_configs.sh  dependencies.sh  publish.sh
